Istio/requestAuthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-dispatch"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
      #app: dispatch-app
  jwtRules:
  - issuer: http://keycloak-keycloak-servicemesh-istio-system.itzroks-665001ngq8-n98nbi-6ccd7f378ae819553d37d5f2ee142bd6-0000.eu-de.containers.appdomain.cloud/realms/aidc_dispatch
    # audiences:
    # - dispatch-admin
    #   account
    jwks: | 
      {"keys":[{"kid":"NSrpYJkLBV29sHqeezorgVZ6wGfjPUX6kHR-HJv0kGc","kty":"RSA","alg":"RS256","use":"sig","n":"nSRverEPPTSmb3T3Ad23RsYz3egE2K2wLOfd0ygXxKeaaZBkJzhTt9cwxyuubwK3VXH4VAVvLwxATLqZcD1xMJLUE2ouwBGZn5eRlFRZdchQciqxCP1PUXE_4u2uMUGoYAFPfNn8PQ_m4plyxysM27OJ4L7lX2ZF6BOd-f7Qt1YmARHQXyQeVFJ3chV2jmVLVvb0C5TOvBUKblIU7x64cSWCmAbXO90lIXN9EAwJ6DELVYfUpeXPGk1MVt9rTydhfJjcjLyK2MlqPF9YDJSeNIh24Si5qfH2rtT83X4kFAc0ajaGVrq2E44iJWIaW0kzONuH95JuZAFiuMCZoUOBZQ","e":"AQAB","x5c":["MIICqTCCAZECBgGEdxNT/jANBg [...]
    #jwksUri: http://keycloak-keycloak-servicemesh-istio-system.itzroks-665001ngq8-n98nbi-6ccd7f378ae819553d37d5f2ee142bd6-0000.eu-de.containers.appdomain.cloud/realms/aidc_dispatch/protocol/openid-connect/certs
