Istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default
  namespace: keycloak-servicemesh
spec:
  host: "*.keycloak-servicemesh.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
#namespace level
#configures a client to use Istio mutual TLS when talking to any service belonging to keycloak-servicemesh namespace.
