Istio/virtualservice-keycloak.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: 
  name: aidc-keycloak-vs
  namespace: keycloak-servicemesh
spec:
  hosts:
  - '*'
  gateways:
  - keycloak-gateway
#  http:
#  - match:
#    - headers:
#        auth-app:
#          exact: keycloak
  http:
  - name: "keycloak-route"
    # match:
    # - uri:
    #     prefix: /keycloak/
    # - rewrite:
    #     uri: " "
    # - uri:
    #     prefix: /admin/
    route:
    - destination:
        host: keycloak-v1-app
        port:
          number: 80
  # http:
  # - name: "keycloak-route"
  #   match:
  #   - uri:
  #       prefix: /keycloak
  #   redirect:
  #     uri: /
  #     authority: keycloak-v1-app.keycloak-servicemesh.svc.cluster.local
